Fix direct dependencies in //media/cast/BUILD.gn.

- Add direct dependencies (e.g. on //base) where missing.
- Move Codec and RtpPayloadType from
  //media/cast/net/cast_transport_config.h to //media/cast/cast_config.h
- Remove an unused header include.

Note that dependencies on //media/* sub-components, in the build targets for executables use //media to reach the sub-components, to avoid duplicate symbols in component builds, due to use of source_set for //media/* subcomponents.

BUG=609355, 530839

Review-Url: https://codereview.chromium.org/2462863002
Cr-Commit-Position: refs/heads/master@{#431043}

Former-commit-id: 1b0056868439b31aa72e10f82aae85b9d2b4ca2e